# Eden

./: .bedrock_agentcore.yaml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  RESEARCH_STRANDS_MULTIAGENT.md  Taskfile.yml  docker-compose.yml  nasa-openapi-spec.json  nginx.conf  pyproject.toml  setup-bedrock.sh
Plans/: FEATURE-SPECS.md  VIRTUAL-FARMING-LAB.md  concept-dashboard.html
agent/: MULTI-AGENT-ARCHITECTURE.md  flight-rules.json  system-prompt.md
brainstorm/: 01-ideas-initial-prompt.md  01-ideas-initial-response.md  02-ideas-follow-up-prompt.md  02-ideas-follow-up-response-1.md  02-ideas-follow-up-response-2.md  02-ideas-follow-up-response-3.md  03-artifact-prompt.md  03-artifact-response.jsx
data/: agent-log-schema.json  dashboard-config.json  mars-ls-calendar.json
docs/: ARCHITECTURE.md  CONCEPT.md  DASHBOARD-V2-DESIGN.md  DASHBOARD-V3-INTEGRATION.md  DATA-MODEL.md  FOOD-PSYCHOLOGY-RESEARCH.md  FRONTEND.md  INTEGRATION.md  MARS-AGRICULTURE-RESEARCH.md  PITCH-PSYCHOLOGY.md  PITCH-STRATEGY.md  PRD.md  QUICKSTART.md  README.md  REHEARSAL-SCRIPT.md  RISKS-AND-GAPS.md  STAGING-BLUEPRINT.md  STORYLINE.md  SYNGENTA-INTELLIGENCE.md  THE-EDGE.md  ULTRABRAINSTORM-SYNTHESIS.md  VIRTUAL-FARMING-LAB-CONCEPT.md  mars-earth-comms-research.md
eden/: __main__.py  api.py  config.py  event_bus.py  logging_config.py  runtime_entry.py  timeshift.py
eden-dashboard/: index.html  package-lock.json  package.json
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  auth.py  compute.py  compute_functions.py  database.py  gateway.py  iam.py  (+9 more)
(+176 files in other folders)
